compiler/test/compile/.fixtures/invalid_program/entry.kn
fas;qlwe 123[0oc =12'`  []o]-]f`]4a;slmdaks vmda;m slmdaks]]/./,
